hphp/test/zend/good/ext/date/tests/bug37616.php
<?php
    date_default_timezone_set("Europe/Oslo");
    var_dump(date(DATE_RFC822, strtotime("1 Jul 06 14:27:30 +0200")));
?>