hphp/test/zend/bad/ext/standard/tests/file/touch_error.php
<?php

var_dump(touch());
var_dump(touch(1, 2, 3, 4));
var_dump(touch("/no/such/file/or/directory"));

?>